# papersys

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  config.toml  playground.ipynb  pyproject.toml  tmp_roundtrip.md
.github/: README.md  SECRETS_SETUP.md
.github/workflows/: daily_paper_workflow.yml
.serena/: project.yml
.serena/memories/: 2025-11-09-summary-pipeline.md  2025-11-10-summary-pipeline.md  2025-11-14-ucb-cluster-preferences.md  2025-11-17-cluster-min-samples.md  2025-11-17-recommend-modularization.md
docs/: NOTION.md  OCR_BATCH_REFACTOR.md  R2_SETUP.md  recommend_by_cluster.md  ultimate_notion.md
docs/reports/: preference_clusters.json
example/: rec_example.parquet  summaries.parquet
papersys/: __main__.py  cli.py  config.py  const.py  data_sources.py  embedding.py  fields.py  ocr.py  summary.py
papersys/cli/: __init__.py  __main__.py  embed_cmd.py  fetch_cmd.py  init_cmd.py  notion_sync_cmd.py  optimize_cmd.py  recommend_cmd.py  stat_cmd.py  summary_cmd.py
papersys/database/: __init__.py  manager.py  migrate.py  name.py  schema.py
papersys/notion/: md2notion.py  summary_sync.py
papersys/recommend/: README.md  __init__.py  cluster_utils.py  example.py  recommender.py  (+2 more)
playground/: database.ipynb  embed.ipynb  export.ipynb  noition.ipynb  ocr.ipynb  summary.ipynb
scripts/: append_recent_preferences.py  cluster_preferences.py  cluster_preferences_baseline.py  md2notion_roundtrip.py  strip-wrapper.lua  sync_local_to_r2.sh  sync_r2_to_local.sh  test_ar5iv_pipeline.py  test_ocr_batch.py  upload_summaries_to_notion.py
(+39 files in other folders)
