[project]
name = "papersys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb>=0.25.2",
    "marker-pdf>=1.10.1",
    "typer>=0.20.0",
]

[project.scripts]
papersys = "papersys.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["papersys"]

